; ModuleID = '/home/carl/AnghaBench/8cc/extr_cpp.c_read_else.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_cpp.c_read_else.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64, i32* }

@cond_incl_stack = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"stray #else\00", align 1
@IN_ELSE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [23 x i8] c"#else appears in #else\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @read_else to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_else(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32, i32* @cond_incl_stack, align 4
  %5 = call i64 @vec_len(i32 %4)
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @errort(i32* %8, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i32, i32* @cond_incl_stack, align 4
  %12 = call %struct.TYPE_3__* @vec_tail(i32 %11)
  store %struct.TYPE_3__* %12, %struct.TYPE_3__** %3, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @IN_ELSE, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %10
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @errort(i32* %19, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  br label %21

21:                                               ; preds = %18, %10
  %22 = call i32 (...) @expect_newline()
  %23 = load i64, i64* @IN_ELSE, align 8
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  store i64 %23, i64* %25, align 8
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 2
  store i32* null, i32** %27, align 8
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %21
  %33 = call i32 (...) @skip_cond_incl()
  br label %34

34:                                               ; preds = %32, %21
  ret void
}

declare dso_local i64 @vec_len(i32) #1

declare dso_local i32 @errort(i32*, i8*) #1

declare dso_local %struct.TYPE_3__* @vec_tail(i32) #1

declare dso_local i32 @expect_newline(...) #1

declare dso_local i32 @skip_cond_incl(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
